syntax = "proto3";

package evaluation;

service EvaluationService {
  rpc Evaluate (EvaluationRequest) returns (EvaluationResponse);
}

message EvaluationRequest {
  string message = 1;
  repeated string possibleCategories = 2;
  repeated string trueClasses = 3;
  repeated string predictedClasses = 4;
}

message EvaluationResponse {
  string result = 1;
}
